// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleHeader matches snapshot when closed 1`] = `
<View
  style={
    {
      "borderRightColor": "transparent",
      "borderRightWidth": 1,
      "flex": 1,
      "margin": 0,
      "padding": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "flex-start",
        "opacity": 1,
        "paddingBottom": 12,
        "paddingTop": 18,
      }
    }
  >
    <ChevronRightIcon
      color="#0000FF"
      height={24}
      testID="chevron-right-icon"
      width={24}
    />
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 24,
          },
          {
            "color": "#0000FF",
          },
        ]
      }
    >
      Test Title
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat",
            "fontSize": 16,
            "fontWeight": "500",
            "marginLeft": 8,
            "opacity": 0.5,
            "paddingTop": 2,
          },
          {
            "color": "#0000FF",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`CollapsibleHeader matches snapshot when open 1`] = `
<View
  style={
    {
      "borderRightColor": "transparent",
      "borderRightWidth": 1,
      "flex": 1,
      "margin": 0,
      "padding": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "flex-start",
        "opacity": 1,
        "paddingBottom": 12,
        "paddingTop": 18,
      }
    }
  >
    <ChevronDownIcon
      color="#0000FF"
      height={24}
      testID="chevron-down-icon"
      width={24}
    />
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 24,
          },
          {
            "color": "#0000FF",
          },
        ]
      }
    >
      Test Title
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat",
            "fontSize": 16,
            "fontWeight": "500",
            "marginLeft": 8,
            "opacity": 0.5,
            "paddingTop": 2,
          },
          {
            "color": "#0000FF",
          },
        ]
      }
    />
  </View>
</View>
`;
